PROJECT(OSG_PLUGINS_MASTER)

SET(TARGET_DEFAULT_PREFIX "osgdb_")
SET(TARGET_DEFAULT_LABEL_PREFIX "Plugins")
SET(TARGET_COMMON_LIBRARIES
    OpenThreads
    osg
    osgDB
    osgUtil
    OCZip
    OCUtility
    OCMain
    OCLayer
)

INCLUDE_DIRECTORIES(${WORKINGPATH}/src/Core)

IF(WIN32)
ADD_SUBDIRECTORY(nc)
ADD_SUBDIRECTORY(ifc)
ADD_SUBDIRECTORY(vrl)
ADD_SUBDIRECTORY(shapefile)
ADD_SUBDIRECTORY(functional)
ADD_SUBDIRECTORY(sqlite)
#ADD_SUBDIRECTORY(pipe)
ENDIF(WIN32)
